[Bugfix]: The buttons on the settings panel wrap when the width is too short, making the right arrow to go to the next line making the button look weird. We forced the button to no wrap when the width is not enough, instead the text of the button will break into two or more lines, but the icons of the button will not wrap, making a more appealing look

--- a/utonoma_styles_library/button.css
+++ b/utonoma_styles_library/button.css
@@ -19,6 +19,7 @@
   padding: 14px 18px;
   max-width: 23rem;
   width: 100%;
+  flex-wrap: nowrap
 }
 
 .Button--textBetweenTwoIcons > div {
